# Kurs5

./: .gitignore  README.md  main.py  pyproject.toml
src/: db_manager.py  exceptions.py  head_hunter_api.py  main.py  settings.py  utils.py
